# web-multitool

./: .gitignore
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
backend/: pyproject.toml
backend/core/: main.py  models.py  routes.py  services.py  settings.py
backend/tests/: conftest.py  short_url_test.py
frontend/: bun.lockb  index.html  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: HomeView.vue  UrlShortener.vue
frontend/src/plugins/: index.js  router.js  vuetify.js
