[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["FilArt <artfil@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
gunicorn = "^21.2.0"
ormar = "^0.12.2"
pytest = "^7.4.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.14"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "frontend",
]

line-length = 88
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
